--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 										<p> Before 2020 pandemic, I worked as a junior developer in Detail Online Technologies responsible for analyzing e-commerce websites and developing web crawlers. I was also assigned in the data science division where I learned to aggregate and engineer data for alaytics and machine learning. </p>
 										<p>Today, I'm currenly working as a freelance home-based web applications developer while also polishing my game development skills.</p>
 										<a href="mailto:netzon.japhet@gmail.com" class="button primary icon solid fa-envelope">Hire me</a>
+										<a href="https://reyjaphet63.github.io/myportfolio/japhet_resume.pdf" class="button primary icon solid fa-file-pdf">Resume</a>
 									</div>
 								</div>
 							</section>
