--- a/index.html
+++ b/index.html
@@ -228,6 +228,11 @@
 							<ul class="actions">
 								<li><a href="mailto:netzon.japhet@gmail.com" class="button icon solid fa-envelope">Mail me</a></li>
 							</ul>
+							<ul class="contact">
+								<li class="icon solid fa-envelope"><a href="#">netzon.japhet@gmail.com</a></li>
+								<li class="icon brands fa-github"><a href="https://github.com/reyjaphet63">github.com/reyjaphet63</a></li>
+								<li class="icon brands fa-deviantart"><a href="https://www.deviantart.com/ghosttrap">deviantart.com/ghosttrap</a></li>
+							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
