--- a/index.html
+++ b/index.html
@@ -184,14 +184,14 @@
 								<div class="inner">
 									<h2 class="major">Projects</h2>
 									<p>Coming Soon</p>
-									<!--
 									<section class="features">
 										<article>
-											<a href="#" class="image"><img src="images/pic04.jpg" alt="" /></a>
-											<h3 class="major">Sed feugiat lorem</h3>
-											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
-											<a href="#" class="special">Learn more</a>
+											<a href="#" class="image"><img src="images/CM_logo.png" alt="" /></a>
+											<h3 class="major">Cat's Meowmory</h3>
+											<p>A simple matching memory mini game made in Godot engine.</p>
+											<a href="https://rinbee.itch.io/cats-meowmory" class="special">Play</a>
 										</article>
+										<!--
 										<article>
 											<a href="#" class="image"><img src="images/pic05.jpg" alt="" /></a>
 											<h3 class="major">Nisl placerat</h3>
@@ -210,11 +210,11 @@
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing vehicula id nulla dignissim dapibus ultrices.</p>
 											<a href="#" class="special">Learn more</a>
 										</article>
+										-->
 									</section>
 									<ul class="actions">
 										<li><a href="#" class="button">Browse All</a></li>
 									</ul>
-								-->
 								</div>
 							</section>
 
