--- a/index.html
+++ b/index.html
@@ -183,7 +183,6 @@
 							<section id="four" class="wrapper alt style2">
 								<div class="inner">
 									<h2 class="major">Projects</h2>
-									<p>Coming Soon</p>
 									<section class="features">
 										<article>
 											<a href="#" class="image"><img src="images/CM_logo.png" alt="" /></a>
@@ -216,6 +215,7 @@
 										<li><a href="#" class="button">Browse All</a></li>
 									</ul>
 								</div>
+								<p>More Projects Coming Soon</p>
 							</section>
 
 					</section>
