--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<div class="inner">
 							<div class="logo"><span class="icon fa-file-code"></span></div>
 							<h1>Hello World! My name is </h1><h2>Japhet Rey</h2>
-							<p>Philippine based developer with a goal-driven creative mindset and passion for learning and innovating.</p>
+							<p>Dubai based developer with a goal-driven creative mindset and passion for learning and innovating.</p>
 						</div>
 					</section>
 
