--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@
 												</thead>
 												<tbody>
 													<tr>
+														<td>2023 - Present</td>
+														<td>I.T. Administrator/ Software Developer</td>
+														<td>Faris Group - Abu Dhabi</td>
+													</tr>
+													<tr>
+														<td>2022-2023</td>
+														<td>Basic Computer Instructor</td>
+														<td>APEX Eagles - Dubai</td>
+													</tr>
+													<tr>
 														<td>2019 - 2020</td>
 														<td>Junior Software Developer</td>
 														<td>Detail Online Technologies</td>
